# medication_extraction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_python.yml
src/medication_extraction/: extraction.py  main.py  ocr.py  phoenix_tracer.py  pipeline.py  prompt_template.json  schema.py  utils.py  validation.py
tests/: test_cli.py  test_pipeline.py
